--- a/lamasat/index.html
+++ b/lamasat/index.html
@@ -10,7 +10,41 @@
 <style>@charset "UTF-8";.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal;}body,html{height:100%;}body{font-family:Roboto,Helvetica Neue,sans-serif;}:root{--bs-blue:#0d6efd;--bs-indigo:#6610f2;--bs-purple:#6f42c1;--bs-pink:#d63384;--bs-red:#dc3545;--bs-orange:#fd7e14;--bs-yellow:#ffc107;--bs-green:#198754;--bs-teal:#20c997;--bs-cyan:#0dcaf0;--bs-white:#fff;--bs-gray:#6c757d;--bs-gray-dark:#343a40;--bs-primary:#0d6efd;--bs-secondary:#6c757d;--bs-success:#198754;--bs-info:#0dcaf0;--bs-warning:#ffc107;--bs-danger:#dc3545;--bs-light:#f8f9fa;--bs-dark:#212529;--bs-font-sans-serif:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";--bs-font-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;--bs-gradient:linear-gradient(180deg,#ffffff26,#fff0);}*,:after,:before{box-sizing:border-box;}@media (prefers-reduced-motion:no-preference){:root{scroll-behavior:smooth;}}body{margin:0;font-family:var(--bs-font-sans-serif);font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent;}</style><link rel="stylesheet" href="styles.80d4b650d6ff58a67e3b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.80d4b650d6ff58a67e3b.css"></noscript></head>
 
 <body class="mat-typography custom-scrollbar">
-    <router-outlet></router-outlet>
+   <div class="container">
+    <div class="row login-page">
+        <div class="col-md-6 ">
+            <div class="img=left">
+                <img src="assets/Login/Login Pic.svg" alt="">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card p-4">
+                <div class="title">
+                    <img width="200" src="assets/Login/Login Logo.svg" alt="">
+                    <h1 class="mt-2">Welcome Back !</h1>
+                    <p>Please login to your account to access</p>
+                </div>
+                <div class="row align-items-baseline">
+                    <div class="col-md-1">
+                        <img src="assets/Login/Username Icon.svg" alt="">
+                    </div>
+                    <div class="col-md-11">
+                        <app-angular-input label="Username"></app-angular-input>
+                    </div>
+                </div>
+                <div class="row align-items-baseline">
+                    <div class="col-md-1">
+                        <img src="assets/Login/Password Icon.svg" alt="">
+                    </div>
+                    <div class="col-md-11">
+                        <app-angular-input label="Password" type="password"></app-angular-input>
+                    </div>
+                </div>
+                <button class="btn btn-primary mt-3" (click)="routeHome()">Login</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="runtime.1393319643c046ddae96.js" defer></script><script src="polyfills.59cd1da306a6c4972c51.js" defer></script><script src="main.af900df8a1e7629a39d0.js" defer></script>
 
 </body></html>
